build: support Java 17 consumers and builds
Target the oldest LTS compatible with the public API language features so
services can adopt the library without a newer runtime. Remove incidental
Java 21 collection calls and align build tooling so the complete repository
can be verified on the minimum JDK.